# rust-capnproto-server-demo

./: Cargo.toml  README.md  build.rs
schema/: message.capnp
src/: client.rs  main.rs  server.rs
